# NIXI.TEL

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  test_invite.txt
.github/workflows/: ci.yml
config/: dev.toml  production.toml.example  sbc.toml.example  test-all-transports.toml  test.toml
crates/sbc-bin/: Cargo.toml
crates/sbc-bin/src/: main.rs
crates/sbc-core/: Cargo.toml
crates/sbc-core/data/: sbc 2.db-shm  sbc.db-wal
crates/sbc-core/src/: acl.rs  api.rs  auth.rs  b2bua.rs  config.rs  dos.rs  error.rs  events.rs  http_server.rs  lib.rs  maintenance.rs  metrics.rs  register.rs  sip_builder.rs  storage.rs  tls_client.rs  topology.rs  transcoding.rs  trunk_register.rs
crates/sbc-core/src/dialog/: dialog.rs  manager.rs  mod.rs
crates/sbc-core/src/media/: data_channel.rs  dtls.rs  ice.rs  manager.rs  mod.rs  port_allocator.rs  rtp.rs  sdp.rs  srtp.rs  srtp_crypto.rs  stun.rs  turn.rs  webrtc_handler.rs
crates/sbc-core/src/routing/: mod.rs  router.rs  trunk.rs
crates/sbc-core/src/sbc/: call_handler.rs  hydrate.rs  import.rs  invite_handler.rs  mod.rs  response_handler.rs
crates/sbc-core/src/security/: ban.rs  destination.rs  mod.rs  user_limits.rs
crates/sbc-core/src/transaction/: manager.rs  mod.rs  state_machine.rs  timers.rs
crates/sbc-core/src/transport/: manager.rs  mod.rs  tcp.rs  tls.rs  tls_connect.rs  udp.rs  ws.rs
crates/sbc-core/tests/: end_to_end.rs
crates/sbc-management/: Cargo.toml
crates/sbc-management/src/: error.rs  lib.rs  server.rs  state.rs
crates/sbc-management/src/api/: mod.rs
crates/sbc-management/src/metrics/: mod.rs
crates/sbc-management/src/routes/: acl.rs  calls.rs  config_api.rs  events.rs  mod.rs  security.rs  system.rs  trunks.rs
crates/sbc-management/tests/: api_axum.rs
crates/sbc-media/: Cargo.toml
crates/sbc-media/src/: error.rs  lib.rs
crates/sbc-media/src/rtp/: mod.rs
crates/sbc-media/src/sdp/: mod.rs
crates/sbc-media/src/transcoding/: mod.rs
crates/sbc-media/src/webrtc/: mod.rs
crates/sbc-security/: Cargo.toml
crates/sbc-security/src/: error.rs  lib.rs
crates/sbc-security/src/auth/: mod.rs
crates/sbc-security/src/dos_protection/: mod.rs
crates/sbc-security/src/firewall/: mod.rs
crates/sbc-security/src/topology_hiding/: mod.rs
crates/sbc-storage/: Cargo.toml
crates/sbc-storage/migrations/: 0001_init.sql
crates/sbc-storage/src/: error.rs  lib.rs  models.rs  store.rs
crates/sbc-storage/src/models/: mod.rs
crates/sbc-storage/src/repositories/: mod.rs
docs/: API.md  INSTALL.md  INTEGRATION_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  QUICKSTART.md  TEST_REPORT_PHASE1_COMPLETE.md  WEBRTC.md
docs/history/: BUILD_SUCCESS.md  COMPILATION_FIXES.md  FINAL_REPORT.md  MEDIA_INTEGRATION.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_COMPLETE_FINAL.md  PHASE4_FINAL_COMPLETE.md  PROJECT_STATUS.md  RESUME_FINAL.md  STATUS_FINAL.md  TEST_REPORT.md
examples/webrtc-client/: README.md  app.js  index.html
monitoring/: README.md
monitoring/grafana/: provisioning-dashboards.yaml  provisioning-datasource.yaml
monitoring/grafana/dashboards/: generate.py  sbc-overview.json
monitoring/prometheus/: alert_rules.yml  prometheus-sbc.yml
scripts/: api_smoke.sh  test_all_codecs.py  test_all_codecs.sh
