[workspace]
members = [
    "crates/sbc-core",
    "crates/sbc-bin",
    "crates/sbc-management",
    "crates/sbc-storage",
]
exclude = ["rsip-nixi"]
resolver = "2"

[workspace.dependencies]
# rsip pour SIP
rsip = { version = "0.4", path = "rsip-nixi" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"

# Networking
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
tokio-tungstenite = "0.21"

# WebRTC
webrtc = "0.9"
webrtc-ice = "0.9"
webrtc-dtls = "0.8"
webrtc-util = { version = "0.8", features = ["conn"] }
webrtc-srtp = "0.12"

# Media
rtp = "0.6"
rtcp = "0.7"
opus = "0.3"
g711 = "0.3"
rubato = "0.14"
sdp = "0.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.22"
rand = "0.8"

# Crypto for SRTP and DTLS
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2.5"
rcgen = "0.12"

# Monitoring
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
config = "0.13"
ipnetwork = "0.20"
trust-dns-resolver = "0.23"

# Async traits
async-trait = "0.1"

# OS interface
libc = "0.2"
