[package]
name = "sbc-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sbc"
path = "src/main.rs"

[dependencies]
sbc-core = { path = "../sbc-core" }
sbc-media = { path = "../sbc-media" }
sbc-security = { path = "../sbc-security" }
sbc-storage = { path = "../sbc-storage" }
sbc-management = { path = "../sbc-management" }

tokio = { workspace = true }

config = { workspace = true }
toml = { workspace = true }

serde = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

structopt = "0.3"
uuid = { workspace = true }
rsip = { workspace = true }
