[package]
name = "sbc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rsip = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-tungstenite = { workspace = true }

dashmap = { workspace = true }
crossbeam = { workspace = true }

uuid = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

base64 = { workspace = true }
rand = { workspace = true }

# Crypto
aes = { workspace = true }
ctr = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
rcgen = { workspace = true }

# WebRTC
webrtc-ice = { workspace = true }
webrtc-dtls = { workspace = true }
webrtc-util = { workspace = true }
webrtc-srtp = { workspace = true }

ipnetwork = { workspace = true }
trust-dns-resolver = { workspace = true }
async-trait = "0.1"
futures-util = "0.3"

# Transcoding
opus = { workspace = true }
rayon = { workspace = true }
