[package]
name = "sbc-management"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
# Management dependencies - Phase 5
# axum = { workspace = true }
# tower = { workspace = true }
# prometheus = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
