[package]
name = "sbc-management"
version = "0.1.0"
edition = "2021"

[dependencies]
sbc-core = { path = "../sbc-core" }

tokio = { workspace = true }
sbc-storage = { path = "../sbc-storage" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

async-trait = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
