[package]
name = "sbc-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
# Database dependencies - Phase 5
# sqlx = { workspace = true }
# redis = { workspace = true }
# uuid = { workspace = true }
# chrono = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
